[gd_scene load_steps=3 format=3 uid="uid://cbx2o5vsv105b"]

[ext_resource type="Script" path="res://Source/MainPortal/main_portal.gd" id="1_w3m10"]
[ext_resource type="Texture2D" uid="uid://b4mrb6f8g57dj" path="res://Assets/Images/Baseball1.jpeg" id="2_k546r"]

[node name="MainPortal" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_w3m10")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -630.0
offset_top = -301.0
offset_right = 630.0
offset_bottom = 408.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_k546r")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HeaderContainer" type="PanelContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 5.0

[node name="MainTitle" type="Label" parent="VBoxContainer/HeaderContainer"]
layout_mode = 2
size_flags_vertical = 1
theme_override_font_sizes/font_size = 48
text = "Godot Baseball Simulator 2024"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MainContainer" type="PanelContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 34.0

[node name="FooterContainer" type="PanelContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/FooterContainer"]
layout_mode = 2

[node name="DebugToggle" type="CheckButton" parent="VBoxContainer/FooterContainer/HBoxContainer"]
layout_mode = 2

[node name="DebugInput" type="LineEdit" parent="VBoxContainer/FooterContainer/HBoxContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 4.0
placeholder_text = "Debug Console"

[node name="DebugLabel" type="Label" parent="VBoxContainer/FooterContainer/HBoxContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 5.0
text = "Debug Log
"

[node name="FpsLabel" type="Label" parent="VBoxContainer/FooterContainer/HBoxContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 3
text = "FPS: 0000"

[connection signal="toggled" from="VBoxContainer/FooterContainer/HBoxContainer/DebugToggle" to="." method="_on_debug_toggle_toggled"]
[connection signal="text_submitted" from="VBoxContainer/FooterContainer/HBoxContainer/DebugInput" to="." method="deprint"]
